# cpustate

./: .SRCINFO  .gitignore  PKGBUILD  README.md  cpustate-0.1.0-1-any.pkg.tar.zst  pyvenv.cfg
Scripts/: activate  activate.bat  activate.fish
config/: cpustate.conf
cpustate/: apply.py
pkg/cpustate/: .BUILDINFO  .MTREE  .PKGINFO
src/cpustate-0.1.0/: pyproject.toml
src/cpustate-0.1.0/cpustate/: main.py  profiles.py  status.py
src/cpustate-0.1.0/systemd/: cpustate.service
src/cpustate-0.1.1/: pyproject.toml
src/cpustate-0.1.1/cpustate/: config.py
systemd/: cpustate-sleep.sh
