[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cpustate"
version = "0.1.0"
description = "Persist CPU power settings (governor, EPP, ryzenadj) across boot and sleep"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[project.scripts]
cpustate = "cpustate.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cpustate*"]